--- a/src/app/components/trabajador/trabajador.component.html
+++ b/src/app/components/trabajador/trabajador.component.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class="table-responsive">
-                <table class="table table-striped table-hover text-center">
+                <table class="table table-hover text-center">
                     <thead class="table-dark">
                         <tr>
                             <th>Tipo Documento</th>
@@ -26,20 +26,22 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of trabajador">
+                        <tr *ngFor="let item of trabajadorPaginado" [class.fila-masculino]="item.sexo === 'M'"
+                            [class.fila-femenino]="item.sexo === 'F'">
                             <td>{{ item.tipoDocumento }}</td>
                             <td>{{ item.numeroDocumento }}</td>
                             <td>{{ item.nombres }}</td>
                             <td>{{ item.sexo }}</td>
-                            <td>{{ item.idDepartamento }}</td>
-                            <td>{{ item.idDistrito }}</td>
-                            <td>{{ item.idProvincia }}</td>
+                            <td>{{ getNombreDepartamento(item.idDepartamento) }}</td>
+                            <td>{{ getNombreProvincia(item.idProvincia) }}</td>
+                            <td>{{ getNombreDistrito(item.idDistrito) }}</td>
+
                             <td>
                                 <button class="btn btn-outline-warning btn-sm me-1" data-bs-toggle="modal"
                                     data-bs-target="#modalEditarTrabajador" (click)="abrirModalEditar(item)">
                                     Editar
                                 </button>
-                                <button class="btn btn-outline-danger btn-sm" (click)="eliminarTrabajador(item.id)">
+                                <button class="btn btn-outline-danger btn-sm" (click)="eliminarTrabajador(item)">
                                     Eliminar
                                 </button>
 
@@ -52,27 +54,37 @@
 
             <nav aria-label="Paginación">
                 <ul class="pagination justify-content-center mt-3">
-                    <li class="page-item disabled"><a class="page-link">Anterior</a></li>
-                    <li class="page-item active"><a class="page-link">1</a></li>
-                    <li class="page-item"><a class="page-link">2</a></li>
-                    <li class="page-item"><a class="page-link">3</a></li>
-                    <li class="page-item"><a class="page-link">Siguiente</a></li>
+                    <li class="page-item" [class.disabled]="paginaActual === 1">
+                        <button class="page-link" (click)="cambiarPagina(paginaActual - 1)">Anterior</button>
+                    </li>
+
+                    <li class="page-item" *ngFor="let pagina of totalPaginas(); let i = index"
+                        [class.active]="paginaActual === pagina">
+                        <button class="page-link" (click)="cambiarPagina(pagina)">
+                            {{ pagina }}
+                        </button>
+                    </li>
+
+                    <li class="page-item" [class.disabled]="paginaActual === totalPaginas().length">
+                        <button class="page-link" (click)="cambiarPagina(paginaActual + 1)">Siguiente</button>
+                    </li>
                 </ul>
             </nav>
+
         </div>
     </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal Registrar Trabajador-->
 <div class="modal fade" id="modalTrabajador" tabindex="-1" aria-labelledby="modalTrabajadorLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg"> <!-- modal-lg para más espacio -->
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header bg-primary text-white">
                 <h5 class="modal-title" id="modalTrabajadorLabel">Registrar Trabajador</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body">
-                <!-- Formulario de registro -->
+
                 <form>
                     <div class="row g-3">
                         <div class="col-md-6">
@@ -146,13 +158,13 @@
     </div>
 </div>
 
-<!-- Modal Editar -->
+<!-- Modal Actualizar Trabajador -->
 <div class="modal fade" id="modalEditarTrabajador" tabindex="-1" aria-labelledby="modalEditarTrabajadorLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header bg-warning text-dark">
-                <h5 class="modal-title" id="modalEditarTrabajadorLabel">Editar Trabajador</h5>
+                <h5 class="modal-title" id="modalEditarTrabajadorLabel">Actualizar Trabajador</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body">
@@ -222,7 +234,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button class="btn btn-primary" (click)="actualizarTrabajador()">Actualizar</button>
+                <button class="btn btn-primary" (click)="actualizarTrabajador()">Guardar</button>
             </div>
         </div>
     </div>
