--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.fila-masculino {
+  background-color: #0d6efd !important;
+  color: white !important;
+}
+
+.fila-femenino {
+  background-color: #d35400 !important;
+  color: white !important;
+}
