--- a/src/app/components/trabajador/trabajador.component.html
+++ b/src/app/components/trabajador/trabajador.component.html
@@ -4,9 +4,21 @@
             <h2 class="mb-0">Lista de Trabajadores</h2>
         </div>
 
+        <div class="row mb-3">
+            <div class="col-md-4 filtro-sexo">
+                <label for="filtroSexo" class="form-label">Filtrar por sexo:</label>
+                <select id="filtroSexo" class="form-select" [(ngModel)]="filtroSexo" (change)="aplicarFiltro()">
+                    <option value="">Todos</option>
+                    <option value="M">Masculino</option>
+                    <option value="F">Femenino</option>
+                </select>
+            </div>
+        </div>
+
+
         <div class="card-body">
             <div class="d-flex  mb-3">
-                <button class="btn-nuevo" data-bs-toggle="modal" data-bs-target="#modalTrabajador">
+                <button class="btn-nuevo" data-bs-toggle="modal" data-bs-target="#modalTrabajador" (click)="resetForm()">
                     Nuevo Registro
                 </button>
             </div>
