--- a/src/app/components/trabajador/trabajador.component.html
+++ b/src/app/components/trabajador/trabajador.component.html
@@ -18,7 +18,8 @@
 
         <div class="card-body">
             <div class="d-flex  mb-3">
-                <button class="btn-nuevo" data-bs-toggle="modal" data-bs-target="#modalTrabajador" (click)="resetForm()">
+                <button class="btn-nuevo" data-bs-toggle="modal" data-bs-target="#modalTrabajador"
+                    (click)="resetForm()">
                     Nuevo Registro
                 </button>
             </div>
