--- a/src/app/components/trabajador/trabajador.component.css
+++ b/src/app/components/trabajador/trabajador.component.css
@@ -76,4 +76,12 @@ table tr.fila-femenino td {
 
 .filtro-sexo {
   margin-left: 20px;
+  margin-top: 30px;
+}
+
+.filtro-sexo label {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: #333;
 }
